--- a/index.html
+++ b/index.html
@@ -5,38 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="project/normalize.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>TAG</h1>
-    <h2>[tжg]</h2>
-    <h3>noun</h3>
-    <ol>
-      <li>
-        a label attached to someone or something for the purpose of
-        identification or to give other information.
-        <dt class="dt1">"he gave his pet a collar with a metal name tag"</dt>
-        <span>synonyms: </span><span class="sp1"
-        >label, ticket, badge, mark, marker, tab, tally, sticker, docket,
-        stub, chit, chitt, counterfoi, flag, stamp
-        <dt class="dt1">"a price tag"</dt>
-        <li>a small piece or part that is attached to a main body.</li>
-      </li>
-    </ol>
-    <h4>verb</h4>
-    <ol>
-      <li>attach a label to.</li>
-      <dt class="dt1">"mothers suspected that their babies had been wrongly tagged during an alarm at the hospital"</dt>
-      <span>synonyms: </span><span class="sp1">label, attach tags to, put a label on, mark, ticket, earmark, identify, docket, flag, indicate</span>
-        <dt class="dt1">"the bottles were tagged with colour-coded labels"</dt>
-        <li>
-          add to something, especially as an afterthought or with no real connection.
-        </li>
-        <dt class="dt1">"she meant to <b>tag</b> her question <b>on</b> at the end of her remarks"</dt>
-        <span>synonyms: </span><span class="sp1">add, tack, join, attach, append, affix, annex </span>
-        <dt class="dt1">"their heads were so large that the rest of their bodies seemed <strong>tagged on</strong> as an afterthought"</dt>
-
-
-
-    </ol>
+  <div class="wrapper">
+    <div class="item">
+      <i class="fa-solid fa-crosshairs" style="font-size: 50px;"></i> <span class="text1">Г.Саратов</span> <i class="fa-solid fa-crosshairs" id="test" style="font-size: 50px;"></i> <span class="text2">ул. Б. Садовая, д. 141, оф. 327. ПН-ПТ 10:00 : 17:00</span> </div>
+      <span class="text3">Woodroom</span> <span class="text4">Шкафы</span> <span class="text5">Стеллажные системы</span> <span class="text6">Условия</span> <span class="text7">О нас</span> <span class="text8">Партнеры</span> <span class="text9">Отзывы</span> <span class="text10">Контакты</span> <span class="text11"></span> <span class="text12">Оплата Online</span> <div class="circle"></div> <span class="text13">woodroom64@yandex.ru</span>
+      <div class="circle2"></div> <div class="circle3"></div> <span class="text14">mastercard</span> <img class="img" src="c:\Users\Admin\Downloads\Visa-Logo-PNG-Free-File-Download.png" alt="Visa"> <img class="img1" src="http://evgenykatyshev.ru/projects/mir-logo/mir-logo.svg" alt="Mir"> <span class="text16">+7-927-054-64-68</span> <span class="text38">Хочу шкаф</span>
+      <div class="item2">
+      <i class="fa-solid fa-v"></i>
+      <script src="https://kit.fontawesome.com/dd4302433f.js" crossorigin="anonymous"></script>
   </body>
 </html>
